no-gap-fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,6 +48,7 @@ body {
 
 .logo {
   color: var(--logo-main-color);
+
   font-family: Raleway, sans-serif;
   font-weight: 700;
   font-size: 26px;
@@ -65,6 +66,7 @@ body {
 .list {
   padding: 0;
   margin: 0;
+
   list-style: none;
 }
 .list-item {
@@ -96,6 +98,7 @@ body {
 
 .site-nav .link {
   color: var(--secondary-text-color);
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -113,6 +116,7 @@ body {
 
 .hero {
   text-align: center;
+
   background-color: var(--accent-background-color);
 }
 .hero-title {
@@ -134,6 +138,7 @@ body {
   border-radius: 4px;
   min-width: 200px;
   text-align: center;
+
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
   font-family: inherit;
@@ -151,6 +156,7 @@ body {
 
 .contacts-header {
   color: var(--main-text-color);
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -191,6 +197,7 @@ body {
   text-align: center;
 
   color: var(--secondary-text-color);
+
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
@@ -203,6 +210,7 @@ body {
 .list-title {
   margin-top: 0;
   margin-bottom: 0;
+
   color: var(--secondary-text-color);
 }
 .pacularities-main-title {
@@ -220,26 +228,31 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   text-align: center;
+
   line-height: 1.7;
 }
 .our-focus {
   padding-left: 215px;
   padding-right: 215px;
 }
+.no-gap {
+  display: block;
+}
 .team-card {
   padding: 0;
   margin: 0;
   width: 270px;
   padding-bottom: 30px;
+
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-
   background-color: var(--white-color);
 }
 .teammember {
   margin-top: 30px;
   margin-bottom: 10px;
+
   font-weight: 500;
   font-size: 16px;
   line-height: 1.19;
@@ -247,6 +260,7 @@ body {
 .profession {
   padding: 0;
   margin: 0;
+
   font-size: 16px;
   line-height: 1.19;
 }
